<resources>
    <string name="app_name">Messenger</string>
    <string name="username">Username</string>
    <string name="email">Email or Phone</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="face_profile">You will not be creating a Facebook profile</string>
    <string name="forget_password">Forget Password</string>
    <string name="already_have_account">Already have an account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_people_fragment">Hello people fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_more_fragment">Hello discover fragment</string>
    <string name="discover">Discover</string>
    <string name="people">People</string>
    <string name="chat">Chats</string>
    <string name="search_nav">Search people, messages…</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="aa">Aa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
